# play_cpp

./: .gitignore  Readme.md
C/DCatC/dcatc/src/: CMakeLists.txt
C/DCatC/dcatc/src/app/: CMakeLists.txt  main.c
C/DCatC/dcatc/src/bbs/: CMakeLists.txt  _bbs_heap.h  _bbs_heap_record.h  _bbs_table.h  bbs_file.c  bbs_file.h  bbs_header.c  bbs_header.h  bbs_table_record.c  bbs_table_record.h  bbs_volume.c  bbs_volume.h  bstr.h  utils.c  utils.h
C/DCatC/dcatc/src/bbs/tests/: test_header.c  test_packer.c  test_table_record.c  test_volume.c
C/DCatC/dcatc/src/path_walker/: CMakeLists.txt  path_walker.c  path_walker.h
C/DCatC/dcatc/src/path_walker/tests/: CMakeLists.txt  main.c
GUI/SFML/cmake_example/: CMakeLists.txt  readme.md
GUI/SFML/cmake_example/src/: main.cpp
GUI/SFML/cmake_example/src/ui/core/: ani_timer.cpp  ani_timer.hpp  update_ctx.cpp
GUI/SFML/cmake_example/src/ui/views/: lamp.cpp  lamp.hpp
GUI/SFML/cmake_example/src/views/: lamp_view.cpp  lamp_view.hpp
GUI/SFML/imgui_integration/: CMakeLists.txt  readme.md
GUI/SFML/imgui_integration/.cache/clangd/index/: ani_timer.cpp.00581DB6E3E270EC.idx  ani_timer.hpp.CC3A2D4A59B294C4.idx  imconfig.h.7C1791D252205CD5.idx  imgui-SFML.cpp.634BD2339B710060.idx  imgui-SFML.h.55C903031D6C0CED.idx  imgui-SFML_export.h.8BEB2CF6AF8736CB.idx  imgui.cpp.92DF08FA9D88F574.idx  imgui.h.C2CF86E0C1166F85.idx  imgui_demo.cpp.D04C8F4CFCB516FC.idx  imgui_draw.cpp.C77594D9F2AB4EC3.idx  imgui_internal.h.01660E4A37A2C199.idx  imgui_tables.cpp.9647F6D8928768B1.idx  imgui_widgets.cpp.334CF2D591239396.idx  imstb_rectpack.h.65562F78BFFE743E.idx  imstb_textedit.h.D577AC028826EE3D.idx  imstb_truetype.h.902F7E6FB798CD91.idx  lamp.cpp.B08A09E1492D3D98.idx  lamp.hpp.40289264910B254D.idx  lamp_view.cpp.30C093DC91A0E49E.idx  lamp_view.hpp.5A3D6D3DD0ADBB4E.idx  (+7 more)
GUI/SFML/imgui_integration/src/: main.cpp
GUI/SFML/imgui_integration/src/views/: lamp_view.hpp
GUI/SFML/imgui_integration/vendors/imgui/: imconfig.h
GUI/fltk/my_ex2_cmake/: CMakeLists.txt  Readme.md
GUI/fltk/my_ex2_cmake/src/: MyBox.hxx  console.cxx  hello.cxx
GUI/fltk/my_ex4_cmake_custom/: .gitignore  CMakeLists.txt  readme.md
GUI/fltk/my_ex4_cmake_system/: CMakeLists.txt  readme.md
GUI/fltk/my_ex4_cmake_system/src/: main.cpp
GUI/imGui/cmake_example/: .clang-format  CMakeLists.txt  _clangd  ex1.txt  ex2.txt  readme.md
GUI/imGui/cmake_example/src/: CMakeLists.txt  main.cpp  main_standalone.cpp
GUI/imGui/cmake_example/src/application/: application.cpp  application.hpp  application_ctx.hpp
GUI/imGui/cmake_example/src/ui/: main_window.cpp  main_window.hpp  scene.cpp  scene.hpp
GUI/imGui/cmake_example/vendors/: _CMakeLists.txt
projects/docker_client/docker_client/: CMakeLists.txt  readme.md
projects/docker_client/docker_client/src/: client.cpp  client.hpp  containers.cpp  containers.hpp  images.cpp  images.hpp  main.cpp
projects/docker_client/docker_client/src/client/: client.cpp  client.hpp  images.cpp
projects/docker_client/docker_client/src/ddd/: docker.cpp  docker.h
projects/docker_imgui/: CMakeLists.txt  readme.md  todo.md
projects/docker_imgui/docker_client/: CMakeLists.txt  docker_client.cpp  docker_client.hpp
projects/docker_imgui/docker_client/entites/: containers.cpp  containers.hpp  images.cpp  images.hpp  system.cpp  system.hpp
projects/docker_imgui/docker_client/models/: container_list_model.hpp  container_model.hpp  docker_version.cpp  docker_version.hpp  image.cpp  image.hpp  image_history_model.hpp  image_list_model.hpp  image_model.hpp  parser_utils.cpp  parser_utils.hpp  system_info.cpp  system_info.hpp
projects/docker_imgui/docker_client/parser/: container_parser.cpp  container_parser.hpp  containers_list_parser.cpp  containers_list_parser.hpp  image_history_parser.cpp  image_history_parser.hpp  image_parser.cpp  image_parser.hpp  images_list_parser.cpp  images_list_parser.hpp  parser_utils.cpp  parser_utils.hpp
projects/docker_imgui/docker_client/sections/: containers.cpp  containers.hpp  containers_filter.cpp  containers_filter.hpp  images.cpp  images.hpp  system.cpp  system.hpp
projects/docker_imgui/docker_client/session/: params_builder.cpp  params_builder.hpp  session.cpp  session.hpp
projects/docker_imgui/src/: main.cpp
projects/docker_imgui/src/application/: application.cpp  application.hpp
projects/docker_imgui/src/ui/: ui_state.cpp  ui_state.hpp
projects/docker_imgui/src/ui/components/: containers_table.cpp  containers_table.hpp
projects/docker_imgui/src/ui/content/: content_frame.cpp  content_frame.hpp  content_window.cpp  content_window.hpp
projects/docker_imgui/src/ui/core/: async_fetcher.cpp  async_fetcher.hpp  drawable.hpp
projects/docker_imgui/src/ui/frames/: frame.hpp
projects/docker_imgui/src/ui/icons/: fa4.hpp  icons.hpp
projects/docker_imgui/src/ui/main_nav/: main_nav.cpp  main_nav.hpp
projects/docker_imgui/src/ui/main_window/: imgui_factory.cpp  imgui_factory.hpp  main_menu.cpp  main_menu.hpp  main_window.cpp  main_window.hpp
projects/docker_imgui/src/ui/pages/: drawable_page.hpp
projects/docker_imgui/src/ui/sys_info_bar/: sys_info_bar.cpp  sys_info_bar.hpp
projects/docker_imgui/src/ui/utils/: humanize.cpp  humanize.hpp
projects/docker_imgui/src/ui/windows/: container_window.cpp  container_window.hpp  image_window.cpp  image_window.hpp  window.hpp  window_handler.hpp
projects/qt_ms3_gui_example/core/: CMakeLists.txt  core.cpp  core.h
projects/qt_ms3_gui_example/core/bootstrap/: bootstrap.cpp  bootstrap.hpp
projects/qt_ms3_gui_example/core/gui/views/: sensor_view.cpp  sensor_view.h  vibrator_view.cpp  vibrator_view.h
projects/qt_ms3_gui_example/core/lib/: service_locator.hpp
projects/qt_ms3_gui_example/core/services/glog/: glog.cpp  glog.hpp  iglog.hpp
projects/qt_ms3_gui_example/core/services/user/: iuser.hpp  user.cpp  user.hpp
projects/qt_ms3_gui_example/core/widgets/: date_time_widget.cpp  date_time_widget.hpp  speciallabel.cpp  speciallabel.h
projects/qt_ms3_gui_example/projects/BsuExample/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mnemo.cpp  mnemo.h
(+224 files in other folders)
